# 6-joints-robot

./: CMakeLists.txt  Makefile  README.md  main.c
interface/: interface.c  interface.h
model/: CMakeLists.txt  model.c  model.h
